--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,108 @@
 .App {
-  text-align: center;
+  background-color: #0f0f0f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  height: 40px;
+  border-radius: 7px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  background-color: #21262c;
+  width: 50vw;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  font-size: 1.5rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container button {
+  padding: 0.4rem 2rem;
+  border-radius: 0.5rem;
+  background-image: linear-gradient(to top right, #28c4fc, #5d6ae8);
+  font-size: 1.5rem;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.dice-container {
+  width: 25vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.dice {
+  color: aliceblue;
+}
+
+@media only screen and (min-width: 600px) {
+  .logo {
+    height: 60px;
+    border-radius: 15px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container {
+    font-size: 3rem;
+  }
+
+  .container button {
+    padding: 0.8rem 3rem;
+    border-radius: 1rem;
+  }
+
+  .dice-container {
+    width: 19vw;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .logo {
+    height: 80px;
+    border-radius: 15px;
+  }
+
+  .container {
+    height: 45vh;
+    font-size: 4rem;
+  }
+
+  .container button {
+    padding: 1rem 6rem;
+    border-radius: 1rem;
+    font-size: 3rem;
+  }
+
+  .dice-container {
+    width: 23vw;
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+  .logo {
+    height: 120px;
+    border-radius: 15px;
+  }
+
+  .container {
+    height: 35vh;
+    font-size: 6rem;
+  }
+
+  .container button {
+    padding: 1.5rem 10rem;
+    font-size: 4rem;
+    font-weight: bold;
+  }
+
+  .dice-container {
+    width: 14vw;
   }
 }
