--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   background-color: #0f0f0f;
   display: flex;
@@ -14,8 +18,8 @@
 
 .container {
   background-color: #21262c;
-  width: 50vw;
-  height: 30vh;
+  width: 50%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,7 +37,7 @@
 }
 
 .dice-container {
-  width: 25vw;
+  width: 60%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
