--- a/src/components/dot/dot.styles.css
+++ b/src/components/dot/dot.styles.css
@@ -6,7 +6,8 @@
 
 .dot {
   border-radius: 50%;
-  background-color: #0f0f0f;
+  background-color: #000000;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 60%;
 }
